--- a/index.html
+++ b/index.html
@@ -251,61 +251,71 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-<script>
-    // 2. Replace with your actual credentials from Supabase Settings -> API
-    const SUPABASE_URL = 'https://wskehyuejpkyxcnisrlu.supabase.co';
-    const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Indza2VoeXVlanBreXhjbmlzcmx1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjgzOTk3ODksImV4cCI6MjA4Mzk3NTc4OX0.IvRh7uWh5BYWuoXvARidqTMhUaQQ3yJ1wlMS1E283ko'; 
-    const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-    async function loadDynamicProjects() {
-        const { data: projects } = await supabase
-              .from("projects")
-              .select("*")
-              .order("id", { ascending: true });
+         
+ <script>
+  const SUPABASE_URL = "https://wskehyuejpkyxcnisrlu.supabase.co";
+  const SUPABASE_KEY = "YOUR_ANON_KEY"; // keep as is
+  const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
+  async function loadDynamicProjects() {
+    const { data, error } = await supabaseClient
+      .from("projects")
+      .select("*")
+      .order("id", { ascending: true });
 
-        if (error) {
-            console.error('Error fetching projects:', error);
-            return;
-        }
-
-        if (data) {
-            const container = document.getElementById('project-container');
-            container.innerHTML = ''; // Remove the "Loading..." message
-
-            data.forEach(project => {
-                // Split tech_stack string into a list for the <ul> tags
-                const techs = project.tech_stack.split(',').map(t => t.trim());
-                const techListHTML = techs.map(t => `<li>${t}</li>`).join('');
-
-                // 3. This builds the EXACT structure of your original HTML
-                container.innerHTML += `
-                    <div class="project-item">
-                        <div class="project-header">
-                            <i class="fas fa-folder-open"></i>
-                            <div class="project-links">
-                                <a href="${project.github_link}" target="_blank" aria-label="GitHub Repo"><i class="fab fa-github"></i></a>
-                                <a href="${project.demo_link}" target="_blank" aria-label="External Link"><i class="fas fa-external-link-alt"></i></a>
-                            </div>
-                        </div>
-                        <h3>${project.name}</h3>
-                        <p class="project-description">${project.description}</p>
-                        <ul class="project-tech-list">
-                            ${techListHTML}
-                        </ul>
-                    </div>
-                `;
-            });
-        }
+    if (error) {
+      console.error("Error fetching projects:", error);
+      return;
     }
 
-    // Run the function when the page loads
-    loadDynamicProjects();
+    const container = document.getElementById("project-container");
+    container.innerHTML = "";
+
+    data.forEach(project => {
+      // SAFE handling for null tech_stack
+      const techs = project.tech_stack
+        ? project.tech_stack.split(",").map(t => t.trim())
+        : [];
+
+      const techListHTML = techs.map(t => `<li>${t}</li>`).join("");
+
+      container.innerHTML += `
+        <div class="project-item">
+          <div class="project-header">
+            <i class="fas fa-folder-open"></i>
+            <div class="project-links">
+              ${
+                project.github_link
+                  ? `<a href="${project.github_link}" target="_blank"><i class="fab fa-github"></i></a>`
+                  : ""
+              }
+              ${
+                project.demo_link
+                  ? `<a href="${project.demo_link}" target="_blank"><i class="fas fa-external-link-alt"></i></a>`
+                  : ""
+              }
+            </div>
+          </div>
+          <h3>${project.name}</h3>
+          <p class="project-description">${project.description ?? ""}</p>
+          <ul class="project-tech-list">
+            ${techListHTML}
+          </ul>
+        </div>
+      `;
+    });
+  }
+
+  loadDynamicProjects();
+</script>
+
 
 </script>
 
 </body>
 
 </html>
+
 
 
