--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
          
  <script>
   const SUPABASE_URL = "https://wskehyuejpkyxcnisrlu.supabase.co";
-  const SUPABASE_KEY = "YOUR_ANON_KEY"; // keep as is
+  const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Indza2VoeXVlanBreXhjbmlzcmx1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjgzOTk3ODksImV4cCI6MjA4Mzk3NTc4OX0.IvRh7uWh5BYWuoXvARidqTMhUaQQ3yJ1wlMS1E283ko"; // keep as is
   const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
   async function loadDynamicProjects() {
@@ -315,6 +315,7 @@
 </body>
 
 </html>
+
 
 
 
