--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                     <h3><i class="fas fa-code"></i> Programming Languages</h3>
                     <div class="skill-bar-list">
                         <div class="skill-bar-item" data-skill-name="Java" data-level="4"></div>
-                        <div class="skill-bar-item" data-skill-name="Advance Java" data-level="4"></div>
+                        <div class="skill-bar-item" data-skill-name="Advance Java" data-level="3"></div>
                         <div class="skill-bar-item" data-skill-name="C / C++" data-level="4"></div>
-                        <div class="skill-bar-item" data-skill-name="Python" data-level="3"></div>
+                        <div class="skill-bar-item" data-skill-name="Python" data-level="4"></div>
                     </div>
                 </div>
 
@@ -98,7 +98,9 @@
                     <h3><i class="fas fa-laptop-code"></i> Backend Development</h3>
                     <div class="skill-bar-list">
                         <div class="skill-bar-item" data-skill-name="MySql / Oracle" data-level="4"></div>
-                        <div class="skill-bar-item" data-skill-name="PLSQL" data-level="4"></div>
+                        <div class="skill-bar-item" data-skill-name="MongoDB" data-level="4"></div>
+                        <div class="skill-bar-item" data-skill-name="Supabase" data-level="4"></div>
+                        <div class="skill-bar-item" data-skill-name="PLSQL" data-level="3"></div>
                     </div>
                 </div>
 
@@ -315,6 +317,7 @@
 </body>
 
 </html>
+
 
 
 
