--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </div>
                 </div>
                 <div class="hero-image">
-                <img src="pfp.jpeg" alt="Ajinkya Mane Portrait">
+                <img src="pfp.jpg" alt="Ajinkya Mane Portrait">
             </div>
             </div>
             
@@ -587,3 +587,4 @@ window.addEventListener("resize", () => {
 
 </body>
 </html>
+
