--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="about-text">
                     <p>A dedicated Computer Engineer with a strong passion for developing robust and user-friendly applications.</p>
                     <p>My journey in tech began with a curiosity for how things work, quickly evolving into hands-on experience in both **front-end development** and **intelligent systems (AI)**.</p>
-                    <p>I thrive in environments where I can leverage my skills in HTML, CSS, JavaScript, Java, and C/C++ to build innovative solutions. I'm also deeply interested in **Prompt Engineering** and applying AI models like ChatGPT, Gemini, and Claude to solve complex problems.</p>
+                    <p>I thrive in environments where I can leverage my skills in Python, HTML, CSS, JavaScript, Java, and C/C++ to build innovative solutions. I'm also deeply interested in **Prompt Engineering** and applying AI models like ChatGPT, Gemini, and Claude to solve complex problems.</p>
                     <div class="social-links">
                         <a href="mailto:ajjumane@gmail.com" target="_blank" aria-label="Email"><i class="fas fa-envelope"></i></a>
                         <a href="https://github.com/ajjumane" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
@@ -525,3 +525,4 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
