--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <nav class="navbar">
         <div class="container">
-            <a href="#hero" class="logo">Ajinkya Mane.</a>
+            <a href="#hero" class="logo"><AM/></a>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
@@ -525,4 +525,5 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
