--- a/index.html
+++ b/index.html
@@ -394,6 +394,8 @@
         </div>
     </section>
     
+<a href="#hero" class="logo">&lt;AM&gt;</a>
+
     
     <div id="snake-cursor">
         <div class="cursor-node head"></div>
@@ -525,6 +527,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
 
 
