--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
         </div>
     </section>
     
-<a href="#hero" class="logo">&lt;AM&gt;</a>
+<div class="d-logo">&lt;/AM&gt;</div>
 
     
     <div id="snake-cursor">
@@ -527,6 +527,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
 </body>
 </html>
+
 
 
 
